Working on spider section.

--- a/app/index.html
+++ b/app/index.html
@@ -143,7 +143,42 @@
 
         <section class="axe"></section>
 
-        <section class="crawler"></section>
+        <section class="crawler">
+          <div>
+            <input placeholder="Name" type="text" />
+            <label class="checkboxContainer"
+              >Console logs<input type="checkbox" /><span
+                class="checkmark"
+              ></span
+            ></label>
+            <label class="checkboxContainer"
+              >Fonts<input type="checkbox" /><span class="checkmark"></span
+            ></label>
+            <label class="checkboxContainer"
+              >Images<input type="checkbox" /><span class="checkmark"></span
+            ></label>
+            <label class="checkboxContainer"
+              >Links<input type="checkbox" /><span class="checkmark"></span
+            ></label>
+            <label class="checkboxContainer"
+              >Meta:data<input type="checkbox" /><span class="checkmark"></span
+            ></label>
+          </div>
+          <div class="lightohouse__about">
+            <div class="lighthouse__aboutContainer">
+              <span class="lighthouse__aboutText">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                maxime soluta laudantium. Praesentium ratione, reprehenderit
+                dolor in, nostrum dolores maxime veritatis sint harum et ipsa
+                doloremque fugit nemo nobis aliquam. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Facilis accusamus voluptas libero
+                iste ea id fugit voluptatibus sequi, eius iure necessitatibus
+                voluptatum explicabo et, ipsum veritatis, esse sunt voluptatem.
+                Non.
+              </span>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
 
