Added settings section

--- a/app/index.html
+++ b/app/index.html
@@ -217,7 +217,94 @@
           </div>
         </section>
 
-        <section class="crawler"></section>
+        <section class="crawler">
+          <div class="sectionContent">
+            <div class="sectionWrapper sectionWrapper--form">
+              <input placeholder="Name" class="fileName__input" type="text" />
+
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+              <label class="checkboxContainer"
+                >lorem<input type="checkbox" /><span class="checkmark"></span
+              ></label>
+
+              <div class="buttons">
+                <button class="button">Check</button>
+              </div>
+            </div>
+
+            <div class="sectionWrapper">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              officia officiis inventore quam autem ex ipsam esse quos. Adipisci
+              eaque repudiandae possimus hic libero voluptatibus, ratione
+              dignissimos nisi ipsam quidem?
+            </div>
+          </div>
+        </section>
+
+        <section class="settings">
+          <ul class="settingsList">
+            <li class="settingsListItem">
+              <div class="settingsTitle">Headless</div>
+              <label class="switch">
+                <input type="checkbox" checked />
+                <span class="slider round"></span>
+              </label>
+            </li>
+            <li class="settingsListItem">
+              <div class="settingsTitle">Autorization</div>
+              <label class="switch">
+                <input type="checkbox" class="js-authorizeSwitch" />
+                <span class="slider round"></span>
+              </label>
+
+              <div class="autorizationInputContainer js-authContainer">
+                <input
+                  class="fileName__input fileName__input--auth"
+                  placeholder="https://google.com/autorize"
+                  type="text"
+                />
+                <button class="button button--auth">Autorize</button>
+              </div>
+            </li>
+            <li class="settingsListItem">
+              <div class="settingsTitle">
+                <label for="textarea__urls">Urls</label>
+              </div>
+              <textarea
+                class="textarea"
+                id="textarea__urls"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </li>
+          </ul>
+        </section>
       </div>
     </div>
 
