Fixed checkbox input in axe testing section.

--- a/app/index.html
+++ b/app/index.html
@@ -122,19 +122,19 @@
           <div class="inputs__columns">
             <div class="inputsColumnsContainer">
               <h2>WCAG 2</h2>
-              <label class="checkboxContainer">Level A<input type="checkbox" /><span class="checkmark"></span></label>
-              <label class="checkboxContainer">Level AA<input checked type="checkbox" /><span class="checkmark"></span></label>
-              <label class="checkboxContainer">Level AAA<input type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Level A<input class="axe-input" name="wcag2a" type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Level AA<input class="axe-input" name="wcag2aa" checked type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Level AAA<input class="axe-input" name="wcag2aaa" type="checkbox" /><span class="checkmark"></span></label>
             </div>
             <div class="inputsColumnsContainer">
               <h2>WCAG 2.1</h2>
-              <label class="checkboxContainer">Level A<input type="checkbox" /><span class="checkmark"></span></label>
-              <label class="checkboxContainer">Level AA<input checked type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Level A<input class="axe-input" name="wcag21a" type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Level AA<input class="axe-input" name="wcag21aa" checked type="checkbox" /><span class="checkmark"></span></label>
             </div>
 
             <div class="inputsColumnsContainer">
               <h2>WCAG 2.2</h2>
-              <label class="checkboxContainer">Level AA<input checked type="checkbox" /><span class="checkmark"></span></label>
+              <label class="checkboxContainer">Level AA<input class="axe-input" name="wcag22aa" checked type="checkbox" /><span class="checkmark"></span></label>
             </div>
           </div>
         </div>
