Added btn style active while crawler is running.

--- a/app/index.html
+++ b/app/index.html
@@ -192,7 +192,7 @@
           <li class="settingsListItem">
             <div class="settingsTitle">Headless</div>
             <label class="switch">
-              <input type="checkbox" class="js-headless" />
+              <input type="checkbox" checked class="js-headless" />
               <span class="slider round"></span>
             </label>
           </li>
